--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,5 +1,6 @@
 {
   "assets/app.css": "http://localhost:8080/assets/app.css",
   "assets/app.js": "http://localhost:8080/assets/app.js",
+  "assets/images/waves-bg.png": "http://localhost:8080/assets/images/waves-bg.47dff743.png",
   "assets/images/background.png": "http://localhost:8080/assets/images/background.eab92336.png"
 }
