--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "assets/app.css": "http://localhost:8080/assets/app.css",
-  "assets/app.js": "http://localhost:8080/assets/app.js",
-  "assets/images/waves-bg.png": "http://localhost:8080/assets/images/waves-bg.47dff743.png",
-  "assets/images/background.png": "http://localhost:8080/assets/images/background.eab92336.png"
+  "assets/app.css": "/assets/app.3e5efd4d.css",
+  "assets/app.js": "/assets/app.adcaff48.js",
+  "assets/images/waves-bg.png": "/assets/images/waves-bg.47dff743.png",
+  "assets/images/background.png": "/assets/images/background.eab92336.png"
 }
